--- a/Inception/M/Makefile
+++ b/Inception/M/Makefile
@@ -1,10 +1,11 @@
 YAML = ./srcs/docker-compose.yml
+
 start:
-	docker-compose -f srcs/docker-compose.yml up -d --build
+	docker-compose -f $(YAML) up -d --build
 up:
-	docker-compose -f srcs/docker-compose.yml up -d
+	docker-compose -f $(YAML) up -d
 down:
-	docker-compose -f srcs/docker-compose.yml down
+	docker-compose -f $(YAML) down
 
 clean: down
 	docker rmi -f nginx mariadb wordpress
