--- a/Inception/M/srcs/requirements/mariadb/Dockerfile
+++ b/Inception/M/srcs/requirements/mariadb/Dockerfile
@@ -1,9 +1,10 @@
 FROM debian:buster
 
 RUN apt-get update
+RUN apt-get -y upgrade
 RUN apt-get install -y vim default-mysql-server
 COPY ./database.sh /
-COPY ./conf/50-server.cnf /stc/mysql/mariadb.conf.d/
+COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/
 RUN chmod +x /database.sh
 EXPOSE 3306
 ENTRYPOINT [ "/database.sh" ]
