--- a/Inception/M/srcs/requirements/nginx/Dockerfile
+++ b/Inception/M/srcs/requirements/nginx/Dockerfile
@@ -1,7 +1,8 @@
 FROM debian:buster
 
 RUN apt-get update
-RUN apt-get -y install openssl vim nginx 
+RUN apt-get -y upgrade
+RUN apt-get -y install openssl vim nginx
 
 COPY ./conf/default.conf /etc/nginx/sites-available/default
 COPY ./conf/nginx.sh /
